<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Origami</string>
    <string name="email_hint">Email</string>
    <string name="change_email_hint">Change email</string>
    <string name="email_nick_hint">Email/Username</string>
    <string name="sign_in_no_password_title">Put an email to use for sign in</string>
    <string name="button_ok_text">OK</string>
    <string name="password_hint">Password</string>
    <string name="current_password_hint">Current Password</string>
    <string name="country_hint">Country</string>
    <string name="button_singin_text">Sign In</string>
    <string name="button_password_recovery_text">Trouble remembering your password</string>
    <string name="name_hint">First &amp; last name</string>
    <string name="nickname_hint">Username</string>
    <string name="password_recovery_title">Forgot password</string>
    <string name="password_recovery_body">Get instructions sent to this email that explain how to
        reset your password.</string>
    <string name="create_account_title">Create account</string>
    <string name="required_field">You can\'t leave this empty.</string>
    <string name="password_length">Strong passwords have at least %1$d characters and a mix of letters
        and numbers</string>
    <string name="invalid_email_address">That email address isn\'t correct</string>
    <string name="missing_email_address">Enter your email address to continue</string>
    <string name="button_text_next">Log in</string>
    <string name="button_next">Next</string>
    <string name="button_text_send">Send</string>
    <string name="button_text_save">Save</string>
    <string name="button_text_sign_in">Sign in</string>
    <string name="require_email_text">Please input email address</string>
    <string name="confirm_recovery_body">Follow the instructions sent to %1$s to recover your
        password.</string>
    <string name="recovery_fail_body">That email address doesn\'t match an existing account</string>
    <string name="account_welcomeback">Welcome back</string>
    <string name="finding_credential">Finding a credential…</string>
    <string name="do_delete">Delete</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="next">Next</string>
    <string name="trouble_signing_in">Trouble signing in?</string>
    <string name="sign_in">Log in</string>
    <string name="sign_in_title">Sign in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="button_done">Done</string>
    <string name="check_your_email">Check your email</string>
    <string name="recover_password_title">Recover password</string>
    <string name="welcome_back_idp_header">You already have an account</string>
    <string name="welcome_back_idp_prompt">
        You\'ve already used <xliff:g id="email_addr" example="jane.doe@example.com">%1$s</xliff:g>.
        Sign in with <xliff:g id="provider_name" example="Google">%2$s</xliff:g> to continue.
    </string>
    <string name="welcome_back_idp_button">Sign in</string>
    <string name="welcome_back_password_prompt_body">You\'ve already used
        <xliff:g id="email_addr" example="jane.doe@example.com">%1$s</xliff:g> to sign in. Enter
        your password for that account.</string>
    <string name="password_word">Password</string>
    <string name="idp_name_google">Google</string>
    <string name="idp_name_facebook">Facebook</string>
    <string name="create_account_preamble">"By tapping SAVE you are indicating that you agree to the "</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="sign_in_with_email">Sign in</string>
    <string name="login_error">Login unsuccessful</string>
    <string name="email_account_creation_error">Email account registration unsuccessful</string>
    <string name="missing_password_email_toast">Missing password or email</string>
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_sending">Sending…</string>
    <string name="progress_dialog_signing_in">Signing in…</string>
    <string name="progress_dialog_signing_up">Signing up…</string>

    <string name="origami_text">Welcome to Origami world!</string>
    <string name="origami_name">Ghost Origami</string>
    <string name="default_photo_url">http://209.132.179.3/uploads/big/2df7cab0a2305743db864ef472b6c8b9.png</string>

    <string name="invalid_username">Invalid username</string>
    <string name="username_must_start_with_character">Username mus start and end with a character</string>
    <string name="username_special_characters_not_allowed">Username can only contain period underscore and hyphen</string>
    <string name="username_too_long">Username is too long</string>
    <string name="username_too_short">Username is too short</string>
    <string name="username_no_character_start">The username must start with a character</string>
    <string name="username_no_character_end">The username must end with a character or number</string>
    <string name="empty_nickname">You can\'t leave nickname empty</string>
    <string name="button_text_register">Not a member yet? Sign Up</string>

    <string name="new_password_hint">New password</string>
    <string name="new_password_confirm_hint">Confirm password</string>

    <string name="login_quote1">”Who in the world am I? Ah, thats the great puzzle.”</string>
    <string name="login_quote2">”Imagination is the only weapon in the war against reality.”</string>
    <string name="login_quote3">”Im not strange, weird, off, nor crazy, my reality is just different from yours.”</string>
    <string name="input_name">Please insert your name so your friends can find you easier</string>

    <string name="no_internet_connection">Sorry, but you are not connected to internet!</string>
    <string name="authentication_failed">Authentication Failed</string>
</resources>
