<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:background="@color/transparent6">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_sign_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_scrollFlags="scroll|enterAlways"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        style="@style/FirebaseUI.WrapperStyle"
        android:orientation="vertical"
        android:layout_below="@+id/view2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/body_text"
            style="@style/FirebaseUI.Text.BodyText"
            android:text="@string/password_recovery_body" />

        <android.support.design.widget.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/email_layout"
            style="@style/FirebaseUI.Text.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/body_text"
            android:paddingTop="16dp"
            app:errorTextAppearance="@style/FirebaseUI.Text.ErrorText"
            app:hintTextAppearance="@style/FirebaseUI.Text.HintText">

            <EditText
                android:id="@+id/email"
                style="@style/FirebaseUI.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/linearLayout"
        android:layout_toEndOf="@+id/linearLayout">

        <Button
            style="@style/FirebaseUI.Button"
            android:id="@+id/button_done"
            android:text="@string/button_text_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_weight="8"
            android:layout_margin="1dp"/>
    </LinearLayout>
</RelativeLayout>
